[package]
description = "Run application in an isolated environment"
edition = "2018"
name = "container"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "3.0.0-rc.4", features = ["derive"]}
flate2 = "1.0"
nix = "0.22"
oci-spec = "0.5"
rand = "0.8"
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tar = "0.4"
tempfile = "3.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = {version = "0.8", features = ["serde", "v4"]}
